Emphasise Friday & Saturday nights, ownership angle

--- a/index.html
+++ b/index.html
@@ -423,31 +423,38 @@
     <div class="left-body">
       <p class="tag">Founding Members &middot; London 2026</p>
 
-      <h1 class="headline">Own the<br>place.</h1>
+      <h1 class="headline">Friday.<br>Saturday.<br>Yours.</h1>
 
       <p class="body-text">
-        London keeps losing the spaces that make it worth living in. 
-        Venues close when the lease is up. The workshop disappears when 
-        the landlord sells. The scene moves on because it has to.
+        A proper night out — members only. Good music, good food, good air. 
+        The kind of night where you actually make friends, because the people 
+        around you aren't just customers. They own the place, same as you.
+      </p>
+
+      <p class="body-text">
+        When everyone has a stake, the whole thing changes. People look out 
+        for each other. The staff aren't strangers. The food is cooked with 
+        care. Nobody's cutting corners because there are no absentee owners 
+        skimming profit from the top — just members, showing up for each other.
       </p>
 
       <div class="pull-quote">
-        "Community ownership is the only thing that's ever actually protected spaces like this."
+        "Good air, good food, good people — just the way it was always supposed to be."
       </div>
 
-      <p class="body-text" style="margin-bottom: 0;">
-        We're building a space — weekday workshops, co-working, Saturday nights — 
-        owned from day one by the people who use it. Real shares. Real governance. 
-        Real stake in what it becomes.
+      <p class="body-text" style="margin-bottom: 0; color: #707070;">
+        During the week: workshops, classes, co-working. Ceramics, music production, 
+        cooking, writing — run by people who actually do these things. The same building, 
+        seven days a week. Different energy. Same community.
       </p>
     </div>
 
     <div>
       <div class="benefits" style="margin-bottom: 28px;">
-        <div class="benefit-row">Actual equity — a share, not a loyalty card</div>
-        <div class="benefit-row">First vote on programming, pricing, and direction</div>
-        <div class="benefit-row">Founding-rate membership, locked in permanently</div>
-        <div class="benefit-row">Access before the public opening</div>
+        <div class="benefit-row">Members-only Friday &amp; Saturday nights — not open to the public</div>
+        <div class="benefit-row">Real equity — a share in the building and what it earns</div>
+        <div class="benefit-row">Vote on music, food, programming, and direction</div>
+        <div class="benefit-row">Founding-rate pricing, locked in permanently</div>
       </div>
 
       <div class="left-footer">London &middot; Opening 2027 &middot; Community-owned from day one</div>
@@ -530,7 +537,7 @@
           <div class="use-grid">
             <label class="use-item"><input type="checkbox" name="use" value="workshops"><span>Workshops &amp; classes (cooking, ceramics, music, writing...)</span></label>
             <label class="use-item"><input type="checkbox" name="use" value="coworking"><span>Co-working / a desk near home</span></label>
-            <label class="use-item"><input type="checkbox" name="use" value="nights"><span>Saturday nights &amp; live music</span></label>
+            <label class="use-item"><input type="checkbox" name="use" value="nights"><span>Friday &amp; Saturday nights</span></label>
             <label class="use-item"><input type="checkbox" name="use" value="teaching"><span>Run a class or workshop myself</span></label>
             <label class="use-item"><input type="checkbox" name="use" value="events"><span>Host events or community gatherings</span></label>
           </div>
