Nights as primary, belonging as the bonus

--- a/index.html
+++ b/index.html
@@ -462,8 +462,9 @@
       <p class="eyebrow">A members' club for London</p>
       <h1>Friday.<br>Saturday.<br>Yours.</h1>
       <p class="hero-sub">
-        A night out the way it was always supposed to be — members only, 
-        exceptionally fun, and owned by the people in the room.
+        Members-only Friday and Saturday nights built to be genuinely, 
+        unreservedly fun. The friendships and the belonging — those are 
+        the bonus.
       </p>
     </section>
 
@@ -471,19 +472,11 @@
     <section class="mission">
 
       <p>
-        Friday and Saturday nights at 6 Minutes are not open to the public. 
-        You're here because you're a member — which means everyone around you 
-        is too. The people on the dancefloor, behind the bar, in the kitchen: 
-        all owners. All with a stake in making this the best night you've had 
-        in years.
-      </p>
-
-      <p>
-        When everyone owns the place, something shifts. People look out for 
-        each other. The food is cooked with care because nobody's cutting 
-        corners for a margin. The air is good. The music is chosen by someone 
-        who actually gives a damn. You make real friends, because the person 
-        next to you isn't just passing through — they helped build this.
+        First: the nights. Friday and Saturday at 6 Minutes are built 
+        to be genuinely, unreservedly fun. Good music — chosen by people 
+        who care about it. Good food. Good air. A room that feels right. 
+        The kind of night you talk about the following week, and again 
+        six months later. That's the job. Everything else comes after.
       </p>
 
       <div class="pull">
@@ -491,20 +484,35 @@
       </div>
 
       <p>
-        During the week, the same building becomes something quieter: 
-        workshops and classes run by working practitioners — ceramics, cooking, 
-        music production, writing — and a co-working space for people who 
-        work better when they're around interesting people. One membership. 
-        One community. Seven days a week.
+        The bonus — and it's a real one — is what happens when the room 
+        is full of owners. Nobody's a stranger in the way they usually are. 
+        The person next to you has a stake in this place, same as you. People 
+        look out for each other, not because they've been told to, but because 
+        it's theirs. Nights out used to feel like that. Most of them stopped.
+        This is an attempt to bring it back.
       </p>
 
       <p>
-        This only works if it's genuinely owned by the people in it. Not 
-        a landlord in Monaco. Not a private equity fund that bought the 
-        building ten years ago. The people who show up — who dance here on 
-        Saturday and sit here on Tuesday — hold the shares, make the 
-        decisions, and share in what it earns. Community-owned from 
-        day one, or not at all.
+        You will make real friends here. Not contacts. Not people you 
+        follow and forget. People you actually know, who you'll see again 
+        next Friday, and the Friday after that. That's not the pitch — 
+        it's just what tends to happen when a room full of people genuinely 
+        give a damn about the same place.
+      </p>
+
+      <p>
+        During the week, the same building runs workshops, classes, and 
+        co-working — ceramics, cooking, music, writing, run by people who 
+        actually do these things. One membership. Same community. A different 
+        kind of Tuesday.
+      </p>
+
+      <p>
+        The ownership model is what makes all of this possible and durable. 
+        No absentee landlord. No private equity. The people who show up — 
+        who dance here on Saturday and work here on Wednesday — hold the shares, 
+        set the direction, and share in what it earns. Community-owned from day one, 
+        or not at all.
       </p>
 
     </section>
