Apply copy edits — members → owners throughout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>6 Minutes — Join the Founding Members List</title>
+  <title>6 Minutes — Join the Founding Owners List</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -453,16 +453,16 @@
     <nav>
       <div class="nav-inner">
         <span class="logo">6 Minutes</span>
-        <span class="nav-tag">Founding Members &middot; London 2026</span>
+        <span class="nav-tag">Founding Owners &middot; London 2026</span>
       </div>
     </nav>
 
     <!-- HERO -->
     <section class="hero">
-      <p class="eyebrow">A members' club for London</p>
-      <h1>Friday.<br>Saturday.<br>Yours.</h1>
+      <p class="eyebrow">An owners-only club for London</p>
+      <h1>Friday.<br>Saturday.<br>Everyday.<br>Yours.</h1>
       <p class="hero-sub">
-        Members-only Friday and Saturday nights built to be genuinely, 
+        Owners-only Friday and Saturday nights built to be genuinely, 
         unreservedly fun. The friendships and the belonging — those are 
         the bonus.
       </p>
@@ -476,15 +476,15 @@
         to be genuinely, unreservedly fun. Good music — chosen by people 
         who care about it. Good food. Good air. A room that feels right. 
         The kind of night you talk about the following week, and again 
-        six months later. That's the job. Everything else comes after.
+        six months later.
       </p>
 
       <div class="pull">
-        "Good air, good food, good people. Just the way it was always supposed to be."
+        "Good music. Good air, good food, good people. Just the way it was always supposed to be."
       </div>
 
       <p>
-        The bonus — and it's a real one — is what happens when the room 
+        The bonus is what happens when the room 
         is full of owners. Nobody's a stranger in the way they usually are. 
         The person next to you has a stake in this place, same as you. People 
         look out for each other, not because they've been told to, but because 
@@ -503,8 +503,7 @@
       <p>
         During the week, the same building runs workshops, classes, and 
         co-working — ceramics, cooking, music, writing, run by people who 
-        actually do these things. One membership. Same community. A different 
-        kind of Tuesday.
+        actually do these things. Same community. A different kind of Tuesday.
       </p>
 
       <p>
@@ -519,12 +518,12 @@
 
     <!-- BENEFITS -->
     <div class="benefits">
-      <p class="benefits-label">Founding members get</p>
+      <p class="benefits-label">Founding owners get</p>
       <ul class="benefit-list">
-        <li>Members-only Friday &amp; Saturday nights — never open to the public</li>
+        <li>Owners-only Friday &amp; Saturday nights — never open to the public</li>
         <li>Actual equity — a share in the building and what it earns</li>
         <li>Vote on music, programming, food, and the direction of the space</li>
-        <li>Founding-rate membership pricing, locked in permanently</li>
+        <li>Founding-rate ownership pricing, locked in permanently</li>
         <li>Access to the space before the public opening</li>
       </ul>
     </div>
@@ -537,7 +536,7 @@
     <div id="form-container">
 
       <div class="form-head">
-        <h2>Join the founding members</h2>
+        <h2>Join the founding owners</h2>
         <p>No money. No commitment. Just signal — you'll be first to know when it moves.</p>
       </div>
 
@@ -632,7 +631,7 @@
           <textarea id="note" name="note" placeholder="Optional — what would make this the space you actually want to exist?"></textarea>
         </div>
 
-        <button type="submit" class="submit-btn">Join the Founding Members List &rarr;</button>
+        <button type="submit" class="submit-btn">Join the Founding Owners List &rarr;</button>
         <p class="form-note">No spam. We'll only reach out when something real happens.</p>
 
       </form>
@@ -642,11 +641,11 @@
     <div id="success-state">
       <div class="success-mark">✓</div>
       <h2>You're in.</h2>
-      <p>We'll be in touch when things move. You'll be first — and that matters when founding members help shape what this becomes.</p>
+      <p>We'll be in touch when things move. You'll be first — and that matters when founding owners help shape what this becomes.</p>
       <p>Share it with someone who'd want to be part of it.</p>
       <div class="share-block">
         <p>Share the page</p>
-        <a href="https://6minutes.london/join">6minutes.london/join</a>
+        <a href="https://6minutes.club/join">6minutes.club/join</a>
       </div>
     </div>
 
