Share link updated to 6minutes.club

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
       <p>Share it with someone who'd want to be part of it.</p>
       <div class="share-block">
         <p>Share the page</p>
-        <a href="https://6minutes.club/join">6minutes.club/join</a>
+        <a href="https://6minutes.club">6minutes.club</a>
       </div>
     </div>
 
