Fix CORS: use text/plain for Apps Script POST

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
       fetch('https://script.google.com/macros/s/AKfycbypfPgDyVzuXX6Lw5qJGBs7YoLhLqm8tgRvCAf9vwT4hHRonmZhbwn9u294pmdg8XKRpw/exec', {
         method:  'POST',
         mode:    'no-cors',
-        headers: { 'Content-Type': 'application/json' },
+        headers: { 'Content-Type': 'text/plain' },
         body:    JSON.stringify(data)
       }).catch(() => {});
 
