--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>6 Minutes — Join the Founding Owners List</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -23,7 +23,7 @@
     html { scroll-behavior: smooth; }
 
     body {
-      font-family: 'Syne', sans-serif;
+      font-family: 'Plus Jakarta Sans', sans-serif;
       background: var(--white);
       color: var(--black);
       font-size: 16px;
@@ -236,7 +236,7 @@
       padding: 14px 16px;
       border: 1px solid var(--border);
       background: var(--white);
-      font-family: 'Syne', sans-serif;
+      font-family: 'Plus Jakarta Sans', sans-serif;
       font-size: 0.92rem;
       font-weight: 400;
       color: var(--black);
@@ -340,7 +340,7 @@
       background: var(--black);
       color: var(--white);
       border: none;
-      font-family: 'Syne', sans-serif;
+      font-family: 'Plus Jakarta Sans', sans-serif;
       font-size: 0.7rem;
       font-weight: 700;
       letter-spacing: 0.28em;
