Add 'The story behind 6 Minutes' to benefits

--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@
         <li>Vote on music, programming, food, and the direction of the space</li>
         <li>Founding-rate ownership pricing, locked in permanently</li>
         <li>Access to the space before the public opening</li>
+        <li>The story behind 6 Minutes</li>
       </ul>
     </div>
 
