--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>6 Minutes — Join the Founding Owners List</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -23,7 +23,7 @@
     html { scroll-behavior: smooth; }
 
     body {
-      font-family: 'Space Grotesk', sans-serif;
+      font-family: 'Plus Jakarta Sans', sans-serif;
       background: var(--white);
       color: var(--black);
       font-size: 16px;
@@ -236,7 +236,7 @@
       padding: 14px 16px;
       border: 1px solid var(--border);
       background: var(--white);
-      font-family: 'Space Grotesk', sans-serif;
+      font-family: 'Plus Jakarta Sans', sans-serif;
       font-size: 0.92rem;
       font-weight: 400;
       color: var(--black);
@@ -340,7 +340,7 @@
       background: var(--black);
       color: var(--white);
       border: none;
-      font-family: 'Space Grotesk', sans-serif;
+      font-family: 'Plus Jakarta Sans', sans-serif;
       font-size: 0.7rem;
       font-weight: 700;
       letter-spacing: 0.28em;
@@ -463,7 +463,8 @@
       <h1>Friday.<br>Saturday.<br>Everyday.<br>Yours.</h1>
       <p class="hero-sub">
         Owners-only Friday and Saturday nights built to be genuinely, 
-        unreservedly fun. The friendships and the belonging — those are 
+        unreservedly fun. Weekday workshops, classes, and co-working for 
+        the same community. The friendships and the belonging — those are 
         the bonus.
       </p>
     </section>
@@ -493,17 +494,17 @@
       </p>
 
       <p>
+        During the week, the same building runs workshops, classes, and 
+        co-working — ceramics, cooking, music, writing, run by people who 
+        actually do these things. Same community. A different kind of Tuesday.
+      </p>
+
+      <p>
         You will make real friends here. Not contacts. Not people you 
         follow and forget. People you actually know, who you'll see again 
         next Friday, and the Friday after that. That's not the pitch — 
         it's just what tends to happen when a room full of people genuinely 
         give a damn about the same place.
-      </p>
-
-      <p>
-        During the week, the same building runs workshops, classes, and 
-        co-working — ceramics, cooking, music, writing, run by people who 
-        actually do these things. Same community. A different kind of Tuesday.
       </p>
 
       <p>
