Update footer copy

--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
 
     <!-- FOOTER -->
     <footer class="page-footer">
-      London &middot; Opening 2027 &middot; Community-owned from day one
+      Made with love &middot; 2026 &middot; London &middot; Community-owned from day one
     </footer>
 
   </div><!-- /wrap -->
