--- a/index.html
+++ b/index.html
@@ -534,12 +534,10 @@
     <div class="benefits">
       <p class="benefits-label">Founding owners get</p>
       <ul class="benefit-list">
-        <li>Owners-only Friday &amp; Saturday nights — never open to the public</li>
+        <li>Owners-only Friday &amp; Saturday nights</li>
         <li>Actual equity — a share in the building and what it earns</li>
-        <li>Vote on music, programming, food, and the direction of the space</li>
-        <li>Founding-rate ownership pricing, locked in permanently</li>
-        <li>Access to the space before the public opening</li>
-        <li>The story behind 6 Minutes</li>
+        <li>Vote on the direction of the space — you decide music, programming, workshops, food, and everything else</li>
+        <li>Why we call it 6 Minutes</li>
       </ul>
     </div>
 
