Add not-from-London option to area checkboxes

--- a/index.html
+++ b/index.html
@@ -637,6 +637,9 @@
               </div>
             </div>
           </div>
+          <div style="margin-top: 12px;">
+            <label class="check-item"><input type="checkbox" name="area" value="not-london"><span>I'm not from London — I just want to get updates about the club</span></label>
+          </div>
         </div>
 
         <div class="form-group">
