Replace borough checkbox grid with a simple text field

--- a/index.html
+++ b/index.html
@@ -590,56 +590,9 @@
         </div>
 
         <div class="form-group">
-          <label class="field-label">Which parts of London work for you?</label>
-          <p class="field-hint">Select all you'd travel to — helps us find the right spot.</p>
-          <div class="borough-grid">
-            <div class="borough-zone">
-              <p class="zone-label">South</p>
-              <div class="check-list">
-                <label class="check-item"><input type="checkbox" name="area" value="Lambeth"><span>Lambeth</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Lewisham"><span>Lewisham</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Southwark"><span>Southwark</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Greenwich"><span>Greenwich</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Wandsworth"><span>Wandsworth</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Croydon"><span>Croydon</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Bromley"><span>Bromley</span></label>
-              </div>
-            </div>
-            <div class="borough-zone">
-              <p class="zone-label">East</p>
-              <div class="check-list">
-                <label class="check-item"><input type="checkbox" name="area" value="Tower Hamlets"><span>Tower Hamlets</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Hackney"><span>Hackney</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Newham"><span>Newham</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Waltham Forest"><span>Waltham Forest</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Barking & Dagenham"><span>Barking &amp; Dagenham</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Redbridge"><span>Redbridge</span></label>
-              </div>
-            </div>
-            <div class="borough-zone">
-              <p class="zone-label">North &amp; Central</p>
-              <div class="check-list">
-                <label class="check-item"><input type="checkbox" name="area" value="Islington"><span>Islington</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Haringey"><span>Haringey</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Camden"><span>Camden</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Westminster"><span>Westminster</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Barnet"><span>Barnet</span></label>
-              </div>
-            </div>
-            <div class="borough-zone">
-              <p class="zone-label">West</p>
-              <div class="check-list">
-                <label class="check-item"><input type="checkbox" name="area" value="Hammersmith & Fulham"><span>Hammersmith &amp; Fulham</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Ealing"><span>Ealing</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Brent"><span>Brent</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Hounslow"><span>Hounslow</span></label>
-                <label class="check-item"><input type="checkbox" name="area" value="Kensington & Chelsea"><span>Kensington &amp; Chelsea</span></label>
-              </div>
-            </div>
-          </div>
-          <div style="margin-top: 12px;">
-            <label class="check-item"><input type="checkbox" name="area" value="not-london"><span>I'm not from London — I just want to get updates about the club</span></label>
-          </div>
+          <label class="field-label" for="area">Which part of London are you in?</label>
+          <p class="field-hint">Your borough, council area, or neighbourhood — helps us find the right spot.</p>
+          <input type="text" id="area" name="area" placeholder="e.g. Hackney, Peckham, not in London...">
         </div>
 
         <div class="form-group">
