Add not-from-London note below founding owners heading

--- a/index.html
+++ b/index.html
@@ -551,6 +551,7 @@
       <div class="form-head">
         <h2>Join the founding owners</h2>
         <p>No money. No commitment. Just signal — you'll be first to know when it moves.</p>
+        <p style="margin-top: 10px; font-size: 0.9em; opacity: 0.75;">Not from London? Sign up to follow the journey — or be an owner anyway.</p>
       </div>
 
       <form id="founding-form">
