Remove nights out line

--- a/index.html
+++ b/index.html
@@ -502,8 +502,7 @@
         is full of owners. Nobody's a stranger in the way they usually are. 
         The person next to you has a stake in this place, same as you. People 
         look out for each other, not because they've been told to, but because 
-        it's theirs. Nights out used to feel like that. Most of them stopped.
-        This is an attempt to bring it back.
+        it's theirs.
       </p>
 
       <p>
